--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,335 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.mohammadraoofnia.sysinfo.MainActivity">
+<ScrollView
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+   <LinearLayout
+       android:padding="10px"
+       android:orientation="vertical"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="sample section"
+           android:textDirection="ltr"
+           android:textSize="16sp"
+           android:textColor="@color/colorPrimary">
 
-    <TextView
-        android:id="@+id/TV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.032" />
+       </TextView>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="sample property:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/name"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl"
+               android:text="sample value">
+           </TextView>
 
+       </LinearLayout>
+
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="About phone"
+           android:textDirection="ltr"
+           android:textSize="16sp"
+           android:textColor="@color/colorPrimary">
+
+       </TextView>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+                     android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Serial:"
+           android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/Serial"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+       android:padding="10px"
+       android:orientation="horizontal"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Model:"
+           android:textDirection="ltr">
+       </TextView>
+       <TextView
+           android:id="@+id/Model"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:textDirection="rtl">
+       </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="ID:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/ID"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Manufacturer:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/Manufacturer"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Brand:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/Brand"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Type:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/Type"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="User:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/User"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Version Incremental:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/VersionI"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="SDK:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/SDK"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Board:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/Board"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Host:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/Host"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="FingerPrint:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/FingerPrint"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Version code:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/VersionC"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Battery"
+           android:textDirection="ltr"
+           android:textSize="16sp"
+           android:textColor="@color/colorPrimary">
+
+       </TextView>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Battery status:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/BatteryStatus"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+       </LinearLayout>
+       <LinearLayout
+       android:padding="10px"
+       android:orientation="horizontal"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Battery percentage:"
+           android:textDirection="ltr">
+       </TextView>
+       <TextView
+           android:id="@+id/BatteryLevel"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:textDirection="rtl">
+       </TextView>
+
+   </LinearLayout>
+
+   </LinearLayout>
+</ScrollView>
 </android.support.constraint.ConstraintLayout>
