--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -315,24 +315,53 @@
            </TextView>
        </LinearLayout>
        <LinearLayout
-       android:padding="10px"
-       android:orientation="horizontal"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Battery percentage:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/BatteryLevel"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl">
+           </TextView>
+
+       </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:text="Battery percentage:"
-           android:textDirection="ltr">
-       </TextView>
-       <TextView
-           android:id="@+id/BatteryLevel"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:textDirection="rtl">
-       </TextView>
+           android:text="Performance"
+           android:textDirection="ltr"
+           android:textSize="16sp"
+           android:textColor="@color/colorPrimary">
 
-   </LinearLayout>
+       </TextView>
+       <LinearLayout
+           android:padding="10px"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Processor frequency:"
+               android:textDirection="ltr">
+           </TextView>
+           <TextView
+               android:id="@+id/Frequency"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:textDirection="rtl"
+               android:text="sample value">
+           </TextView>
+
+       </LinearLayout>
 
    </LinearLayout>
 </ScrollView>
